# mix

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  config_example  entrypoint.sh  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  docker.yml
cmake/: FindLMDB.cmake  version.cmake
docker/: nginx.conf  supervisord.conf
docs/: changelog.md  index.md  package-lock.json  package.json  tailwind.config.js  vite.config.mjs
docs/.vitepress/: config.mts  de.ts  en.ts
docs/.vitepress/theme/: custom.css  index.mts
docs/de/: changelog.md  index.md
docs/de/hosted/: started.md  what-is-mix-rooms.md
docs/de/self-hosting/: install-docker.md  install-intro.md  install-source-archlinux.md  install-source-build.md  install-source-ubuntu.md  install-source-ubuntu24_04.md  install-source-update.md
docs/hosted/: magic-repair.md  started.md  what-is-mix-rooms.md
docs/self-hosting/: index.md  install-docker.md  install-source-archlinux.md  install-source-build.md  install-source-ubuntu.md  install-source-ubuntu24_04.md  install-source-update.md  install-source.md
include/: mix.h
modules/amix/: CMakeLists.txt  amix.c  amix.h  flac.c  record.c
modules/aumix/: CMakeLists.txt  aumix.c  aumix.h  flac.c  record.c
modules/vidmix/: CMakeLists.txt  disp.c  record.c  src.c  vidmix.c  vidmix.h
modules/vmix/: CMakeLists.txt  codec.c  disp.c  pktsrc.c  record.c  src.c  vmix.c  vmix.h
patches/: 2365.patch  2634.patch  2636.patch  2861.patch  avcodec_decode_scale_crash.patch  avcodec_encode_refs.patch  avcodec_simple_decode_recorder.patch  baresip_2936.patch  baresip_ice_sdp_mdns.patch  baresip_jbuf_nack.patch  baresip_packet_dup_handler.patch  baresip_stream_enable.patch  baresip_video_burst_size.patch  baresip_video_latency.patch  baresip_video_poll_pr2465.patch  baresip_video_remove_sendq_empty.patch  mediatrack_audio_video.patch  re_864.patch  re_877.patch  re_aubuf_timestamp_order_fix.patch  re_aumix_record_only.patch  re_icesdp_getaddr.patch  re_jbuf_stat.patch  re_vidmix_clear.patch  rem_vidmix_clear.patch
src/: avatar.c  chat.c  db.c  demo.c  http.c  http_client.c  main.c  mix.c  mix.h  sess.c  sip.c  social.c  source.c  stats.c  tracks.c  users.c  ws.c
tests/bdd/: auth.feature_disabled  chat.feature  environment.py  login.feature  requirements.txt
tests/bdd/steps/: steps.py
tests/features/: login.feature
tests/features/steps/: login.py
tests/features/steps/data/: avatar.base64
tests/integration/: avatar.base64  signup.sh
tests/phpunit/: .phpunit.result.cache  composer.json  phpunit.xml
tests/phpunit/tests/: ApiTest.php  ChatTest.php  Client.php  LoginTest.php  TestCase.php
webui/: .env.development  .env.production  .eslintrc.cjs  .eslintrc.js  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
webui/src/: App.vue  api.ts  avdummy.ts  config.ts  console.ts  error.ts  fadeout.ts  index.css  main.js  main.ts  shortcuts.ts  vite-env.d.ts  webcam.ts  webrtc.ts  webrtc_source.ts
webui/src/components/: BottomActions.vue  ButtonPrimary.vue  ButtonSecondary.vue  Calls.vue  Chat.vue  Error.vue  ErrorText.vue  FooterLinks.vue  HelloWorld.vue  Listeners.vue  ReactionEmoji.vue  RecButton.vue  SettingsModal.vue  Speakers.vue  StudioNav.vue  WebcamPhoto.vue  WebrtcVideo.vue
webui/src/components/Tracks/: RemoteTrack.vue  RemoteTrackCall.vue  RemoteTrackSettings.vue  Tracks.vue
webui/src/router/: index.ts
webui/src/views/: FatalErrorView.vue  HomeView.vue  LoginView.vue  SocialLoginView.vue
webui/src/ws/: state.ts  tracks.ts  users.ts
